# ksbot_ga

./: .env.example  .gitignore  GA_REVISION  LICENSE  README.md  pyproject.toml
bridge/: package-lock.json  package.json  wps_event_bridge.mjs  wps_event_normalize.mjs
config/: clusters.yaml  system_prompt.md
docs/: AGENT_RULES.md  PROJECT.md
examples/: mykey.local.example.py  mykey_openai_compatible.py
scripts/: configure_ga_local.py  fetch_ga.py  probe_ga_contract.py  send_sample_event.py  token_budget.py
skills/github-research/: SKILL.md
skills/k8s-cluster/: SKILL.md
skills/sglang-operations/: SKILL.md
skills/wps-chat/: SKILL.md
skills/wps-chat/scripts/: wps_chat.py
src/ga_core/: config.py  ga_handler.py  ga_runtime.py  ga_ui.py  gate.py  skills.py
src/ga_wps/: __init__.py  app.py  approval.py  callback.py  client.py  config.py  history.py  kdocs.py  protocol.py  ui.py  ui_streamlit.py  wps.py
tests/: test_approval.py  test_config.py  test_configure_ga_local.py  test_dispatch.py  test_fetch_ga.py  test_ga_handler.py  test_ga_session.py  test_ga_upstream_seam.py  test_gate.py  test_ui_agent.py  test_wps.py  test_wps_bridge.py  test_wps_callback.py  test_wps_client.py  test_wps_config.py  test_wps_live.py  test_wps_protocol.py  test_wps_skill.py
