[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksbot-ga"
version = "0.1.0"
description = "Thin WPS product shell around GenericAgent with a Kubernetes AI gate"
requires-python = ">=3.11,<3.14"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "bottle>=0.12",
    "simple-websocket-server>=0.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
ui = ["prompt-toolkit>=3", "rich>=13", "streamlit>=1.40"]
vision = ["Pillow>=10"]

[project.scripts]
ga-wps = "ga_wps.app:main"
ga-wps-tui = "ga_wps.ui:main_tui"
ga-wps-streamlit = "ga_wps.ui:main_streamlit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
